fixed layout shifting issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,6 +125,9 @@
   * {
     @apply border-border;
   }
+  html {
+    scrollbar-gutter: stable;
+  }
   body {
     @apply bg-background text-foreground;
     font-family: "Inter", "Open Sans", -apple-system, BlinkMacSystemFont,
